--- a/app/src/main/res/layout/activity_third.xml
+++ b/app/src/main/res/layout/activity_third.xml
@@ -5,6 +5,6 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Screen.Third.ThirdActivity">
+    tools:context=".ui.Third.ThirdActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
